# Iter

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md  corespec.md  file-window.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
src/: ControlPanel.tsx  FileWindow.tsx  RelationCard.tsx  RelationGraph.tsx  StackTraceGraph.tsx  file-window.tsx  lsp.test.ts  lsp.ts  main.rs  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  compile_db.rs  lib.rs  lsp.rs  lsp_commands.rs  main.rs  project.rs  snippet.rs  stack_trace.rs  window.rs
src/analysis/: assembly_analyzer.rs  ast_analyzer.rs  mod.rs
src/cache/: cache_manager.rs
src/core/: config.rs  error_parser.rs  mod.rs  orchestrator.rs  types.rs
src/editor/: editor_view.rs
src/graph/: animation.rs  graph_edge.rs  graph_layout.rs  graph_node.rs  graph_view.rs  mod.rs
src/platform/: mod.rs  renderer.rs  renderer_cairo.rs  renderer_soft.rs  window.rs  window_x11.rs
