[package]
name = "iter"
version = "0.1.0"
description = "Iter — code relation visualizer"
authors = ["LUDIARS"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "iter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
lsp-types = "0.97"
url = "2"
which = "7"

[features]
custom-protocol = ["tauri/custom-protocol"]
